# lavicot

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
baseline/: evaluate.py  train_rl.py  train_sft.py
experiments/configs/: default.yaml
experiments/slurm_scripts/: prefix_attn_7b.sh  prefix_attn_7b_2blocks.sh  test_exp_slurm.sh
scripts/: evaluate.py  train.py
src/lavicot/: __init__.py
src/lavicot/config/: __init__.py  config_loader.py
src/lavicot/config/datasets/: README.md  aqr.yaml  gsm8k.yaml  math.yaml  metamath.yaml
src/lavicot/config/defaults/: debug.yaml  default.yaml
src/lavicot/evaluation/: evaluator.py
src/lavicot/models/: __init__.py  base_model_integration.py  lavicot_bias.py  lavicot_prefix_with_hooker_backup.py  lavicot_prefix_with_wrapper.py  lavicot_setup.py
src/lavicot/models/adapter_base_generator_methods/: looped_tf_query_generator.py  looped_transformer_1layer1tokenFromNoise.py
src/lavicot/models/lavicot_models/: lavicot_bias.py  lavicot_bias_gamma.py  lavicot_prefix_attention.py  lavicot_prefix_with_hooker_backup.py  lavicot_prefix_with_wrapper.py
src/lavicot/training/: checkpoint_utils.py  config_utils.py  model_setup_utils.py  setup_utils.py  trainer.py  training_utils.py
src/lavicot/training/components/: handlers.py
src/lavicot/utils/: data_utils.py  logging_utils.py  tokenizer_utils.py
tests/integration/: test_comprehensive.py
tests/unit/: test_models.py
